@@ -52,6 +52,7 @@
             <key> <string>_body</string> </key>
             <value> <string encoding="cdata"><![CDATA[
 
+from Products.CMFCore.WorkflowCore import WorkflowException\n
 from Products.Formulator.Errors import FormValidationError\n
 from Products.DCWorkflow.DCWorkflow import ValidationFailed\n
 from Products.ERP5Type.Message import translateString\n
@@ -118,6 +119,12 @@ except ValidationFailed, error_message:\n
                           # that would become an error.\n
     log("Status message has been truncated")\n
     message = "%s ..." % message[:(2000 - 4)]\n
+except WorkflowException, error_message:\n
+  if str(error_message) == "No workflow provides the \'${action_id}\' action.":\n
+    message = translateString("Workflow state may have been updated by other user. Please try again.")\n
+    return context.Base_redirect(form_id, keep_items={\'portal_status_message\': message}, **kw)\n
+  else:\n
+    raise\n
 else:\n
   message = request.get(\'portal_status_message\')\n
   if message is None:\n
